--- a/angular.json
+++ b/angular.json
@@ -94,7 +94,10 @@
               }
             ],
             "styles": [
-              "src/styles.scss"
+              "src/styles.scss",
+              "node_modules/primeicons/primeicons.css",
+  "node_modules/primeng/resources/themes/saga-blue/theme.css", 
+  "node_modules/primeng/resources/primeng.min.css"
             ],
             "scripts": []
           }
